# openai-zany

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: autonomous-checklist.md  commands.md  development.md  ideas.md  release-notes-template.md  session-log.md  status.html
docs/sessions/: 2026-07-12-024500-append-only-session-records.md  2026-07-12-024558-cli-smoke-test.md  2026-07-12-024809-sessions-json-directory-support.md  2026-07-12-035237-document-session-log-check.md  2026-07-12-044849-ignore-nested-backlog-bullets.md  2026-07-12-054339-align-development-notes.md  2026-07-12-065200-restore-command-registry.md  2026-07-12-074731-ignore-deeper-backlog-sections.md  2026-07-12-084506-test-session-record-contract.md  2026-07-12-094344-test-malformed-session-filtering.md  2026-07-12-104348-test-session-record-files.md  (+31 more)
tests/: test_append_only_sessions.py  test_backlog.py  test_cli.py  test_command_registry_deduplication.py  test_docs_diff.py  test_generated_docs.py  test_main_cli.py  test_main_cli_backlog_arguments.py  test_main_cli_backlog_isolation.py  test_main_cli_backlog_status.py  test_main_cli_changelog_arguments.py  test_main_cli_docs_diff_arguments.py  test_main_cli_freshness_arguments.py  test_main_cli_generate_docs_arguments.py  test_main_cli_session_check.py  test_roadmap.py  test_session_check.py  test_session_discovery.py  test_session_json.py  test_session_json_limit_validation.py  test_session_record_contract.py  test_session_record_files.py  test_session_reports.py  test_status_page_command.py
(+9 files in other folders)
