[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-zany"
version = "0.1.0"
description = "Bounded assistant-built utility playground."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vicknesh Suppramaniam" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
zany = "openai_zany.cli:main"
zany-docs-diff = "openai_zany.docs_diff:main"
zany-sessions-json = "openai_zany.session_json:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
